--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo5.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finwing</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/logo5.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Finwing</title>
+
+  <!-- ✅ Open Graph (OG) Tags for Social Media -->
+  <meta property="og:title" content="Finwing - The Future of Finance" />
+  <meta property="og:description"
+    content="Join the ultimate financial ecosystem where innovation meets investment. 🚀" />
+  <meta property="og:image" content="/logo5.png" />
+  <meta property="og:url" content="https://finwing.xyz" />
+  <meta property="og:type" content="website" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
